Remove permission requirement from web search tool
Web search is harmless and should be available to all users,
not just admins. No security risk in searching the internet.

Changes:
- WebSearchTool now requires no permissions (empty set)
- Removed web:* from admin user initialization

Now anyone in the allowlist can use web_search tool.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>